# dash

./: .gitignore  Cargo.toml
src/: app.rs  controller.rs  home.rs  main.rs  theme.rs
src/home/: mod.rs  view.rs
src/music/: mod.rs  session.rs  view.rs
src/music/view/: browser.rs  mod.rs  player.rs
src/pages/: controller.rs  home.rs  mod.rs  settings.rs
src/pages/home/: mod.rs  view.rs
src/pages/settings/: mod.rs  store.rs  view.rs
src/settings/: mod.rs  session.rs  store.rs  view.rs
src/theme/: clock.rs  colors.rs  dark_mode.rs  mod.rs  style.rs
