[package]
name = "dash"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.33.3"
eframe = { version = "0.33.3", default-features = false, features = ["default_fonts", "glow", "x11"] }
egui_extras = { version = "0.33.3", default-features = false, features = ["svg"] }
chrono = { version = "0.4.44", default-features = false, features = ["clock", "std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
mimalloc = { version = "0.1.48", default-features = false }
rand = "0.10.0"
rodio = "0.22.2"
lofty = "0.23.2"
image = "0.25.9"

# https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
strip = "symbols"